WHAT IS NEW?

???? ?? 20?? [Ypsiliform]

  * New Features
    * Plotscripting can now load sprites, and place them on screen.
      [Mike]
    * Limit on maximum items has been raised from 254 to 32000 [James]
    * Limit on how many item slots you have in your inventory has been
      raised from 198 to 357 [James]
    * The hero editor now has an "Equipment" submenu which provides a
      convenient way to choose which items a hero can equip without
      needing to go back to the item editor [James]
    * Text box "shrink" can now be set to Auto, so the vertical size
      of the box is determined by the text in it. [James]
    * Press + in the text box editor to create a new box with the same
      style as the current box [James]
    * ALT+C and ALT+V to copy/paste text box styles [James]
    * Added "Connected boxes" navigation tool to the text box editor
      [James]

  * Bugfixes
    * Bug 684: Lower half of inventory screen gets deleted when you
      load [James]

  * New Plotscripting Stuff

  * Vikings of Midgard

  * Stuff only Developers Will Notice
    * New slice routines for rectangular objects of various styles that
      can be organized into a tree and positioned and sized relative to
      one another. [Mike]

October 03 2008 [xocolatl+]

  * Vikings of Midgard
    * Character portraits [Fenrir-Lunaris]
    * New spell quests [Fenrir-Lunaris]
    * Other minor fixes [Fenrir-Lunaris]

October 02 2008 [xocolatl]

  * New Features
    * Spells and items used outside of battle now display their
      target stat instead of always displaying HP [Mike]
    * Visual placement of hero's hand positions and weapon's
      handle positions. [James]
    * Text boxes can be exported as a .TXT file, edited with
       your favorite text editor or spellchecker, and then
       re-imported back into your game [James, Mike]
    * Character portraits! You can now draw 50x50 pictures for
      heroes and NPCs that can be displayed in text boxes [James]